--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 # APP ID
 NEXT_PUBLIC_APP_ID=uh123oI6XW9IexFI
 # APP API key
-NEXT_PUBLIC_APP_KEY=
+NEXT_PUBLIC_APP_KEY=app-FKeW4tWzosImRA7WmSflyDyA
 # API url prefix
 NEXT_PUBLIC_API_URL=
